--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,10 @@ sass:
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 excerpt_separator: "<!--more-->"
+collections:
+  games:
+    order:
+      - 2022-04-01-PokemonGo.md
 
 # Exclude from processing.
 # The following items will not be processed, by default.
