--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,10 @@ twitter:
 logo: assets/images/headshot.jpg
 image: assets/images/headshot.jpg
 
+kramdown:
+  syntax_highlighter_opts:
+    disable: true
+
 social:
   name: Jaiden Gerig
   links:
