More Tooling around with links

--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,12 @@ social:
 
 permalink: pretty
 
+collections:
+  posts:
+    output: true
+    permalink: /blog/:title
+
+
 feed:
   categories:
     - blog
